# quotes

./: .gitignore  Cargo.toml  Dockerfile  atlas.hcl  compose.yaml
atlas/: schema.hcl
migrations/: 20250201074518_init.sql  atlas.sum
src/: handlers.rs  main.rs  state.rs
src/handlers/: create_quote.rs  delete_one_quote.rs  read_all_quotes.rs  read_one_quote.rs  update_one_quote.rs
