[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv-vault = "0.1.1"
dotenv = "0.15.0"
fred = { version = "8.0", features = ["serde-json", "enable-rustls", "rustls"] }
names = { version = "0.14.0", default-features = false }
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5", features = ["trace"] }
sqlx = { version = "0.7", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] } # Resolve later
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3.0"